# indieauth

./: .gitignore  Cargo.toml  Rocket.example.toml
contrib/keygen/: go.mod
contrib/keygen/cmd/: keygen.go
frontend/src/: App.elm  Layout.elm  Main.elm  Model.elm  Route.elm
frontend/src/Page/: Index.elm  Login.elm
migrations/2023-04-09-185053_initial_migration/: down.sql  up.sql
src/: frontend.rs  gitlab.rs  lib.rs  models.rs  paseto.rs  rocket_trace.rs  schema.rs
src/api/: error.rs  indieauth.rs  mod.rs  token.rs
src/oauth/: adapter.rs  config.rs  mod.rs  pkce.rs
src/wellknown/: botinfo.txt  mod.rs  security.txt
static/: gruvbox.css  install-sw.js  manifest.json  sw.js
templates/: app.html  authz.html  notfound.html
