[package]
name = "indieauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { git = "https://github.com/djc/askama", rev = "4c98685b81509a59bf7719321eb2136d7dccca38", features = ["with-rocket"] }
askama_rocket = { git = "https://github.com/djc/askama", rev = "4c98685b81509a59bf7719321eb2136d7dccca38" }
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
color-eyre = "0.6.2"
diesel = { version = "2.0.3", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
hex = "0.4.3"
paseto = { version = "2.0.2", features = ["v2", "easy_tokens_chrono"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
reqwest = { version = "0.11.16", features = ["json"] }
ring = { version = "0.16.20", features = ["std"] }
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
rocket_cors = "0.6.0-alpha2"
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_sqlite_pool"] }
rusty_ulid = "2.0.0"
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["parking_lot"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
